// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registerSuite When suite does not exist in state Should create initial suite without prevState 1`] = `
Object {
  "doneCallbacks": Array [],
  "errorCount": 0,
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {},
  "suiteId": "suiteId_1",
  "tests": Object {},
  "warnCount": 0,
}
`;

exports[`registerSuite When suite exists in state Prev state data handling When lagging and/or pending exist in the previous state Should match snapshot 1`] = `
Array [
  Object {
    "doneCallbacks": Array [],
    "errorCount": 0,
    "exclusive": Object {},
    "fieldCallbacks": Object {},
    "groups": Object {},
    "lagging": Array [
      [MockFunction],
      [MockFunction],
      [MockFunction],
      [MockFunction],
      [MockFunction],
      [MockFunction],
    ],
    "name": "suite_1",
    "pending": Array [],
    "skippedGroups": Object {},
    "skippedTests": Object {},
    "suiteId": "suiteId_1",
    "tests": Object {},
    "warnCount": 0,
  },
  Object {
    "doneCallbacks": Array [],
    "errorCount": 0,
    "exclusive": Object {},
    "fieldCallbacks": Object {},
    "groups": Object {},
    "lagging": null,
    "name": "suite_1",
    "pending": null,
    "skippedGroups": Object {},
    "skippedTests": Object {},
    "suiteId": "suiteId_1",
    "tests": Object {},
    "warnCount": 0,
  },
]
`;

exports[`registerSuite When suite exists in state Should match snapshot 1`] = `
Array [
  Object {
    "doneCallbacks": Array [],
    "errorCount": 0,
    "exclusive": Object {},
    "fieldCallbacks": Object {},
    "groups": Object {},
    "lagging": Array [],
    "name": "suite_1",
    "pending": Array [],
    "skippedGroups": Object {},
    "skippedTests": Object {},
    "suiteId": "suiteId_1",
    "tests": Object {},
    "warnCount": 0,
  },
  Object {
    "doneCallbacks": Array [],
    "errorCount": 0,
    "exclusive": Object {},
    "fieldCallbacks": Object {},
    "groups": Object {},
    "lagging": null,
    "name": "suite_1",
    "pending": null,
    "skippedGroups": Object {},
    "skippedTests": Object {},
    "suiteId": "suiteId_1",
    "tests": Object {},
    "warnCount": 0,
  },
]
`;
